# python-getting-started

./: .env  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .python-version  .venv  DataAnalyst.html  Dockerfile  JavaDeveloper.html  Jenkinsfile  Pipfile  Procfile  Procfile.windows  README.md  RandomNumber.py  SECURITY.md  SiteMap.xml  althkmabod. py  app.json  bot.py  data_analysis.py  django_heroku.py  docker-compose.yml  get-platformio.py  gunicorn.conf.py  index.html  install_dev_environment.sh  main.py  manage.py  markers.json  project.toml  pyproject.toml  pytest.ini  requirements.txt  run_local.sh  runtime.txt  ubuntu-install.sh  urls.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.MD  dependabot.yml
api/: models.py  serializers.py  tests.py  urls.py  views.py
app/: admin.py  forms.py  models.py  urls.py  views.py
carshop_api/: apps.py  models.py  serializers.py  urls.py  views.py
carsshop/: apps.py  forms.py  models.py  urls.py  views.py
config/: settings.py  urls.py
django_heroku/: Makefile  README.rst  __init__.py  core.py  django_heroku.py  setup.py
env/: pyvenv.cfg
fixtures/: appdata.json
front_end/: index.html  script.js  style.css
gettingstarted/: asgi.py  heroku_test_runner.py  local_settings.py.tpl  settings.py  urls.py  wsgi.py
gigs/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
hello/: .views.py.swp  apps.py  data_analysis.py  models.py  settings.py  tests.py  urls.py  views.py  views.py~
homepage/: admin.py  models.py  views.py
horecatm/: admin.py  models.py  settings.py  urls.py  views.py  wsgi.py
people/: apps.py  (+5 more)
(+197 files in other folders)
